catkin_ws/logs/backend/build.make.1039.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘void logPoseGraphNode(const SLAM::Frame&, const Isometry3d&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:86:68: error: expected ‘)’ before ‘{’ token
  if ((new_node || (frame.getId() == 0))&&(!frame.getBadFrameFlag()){
                                                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:105:1: error: expected primary-expression before ‘}’ token
 }
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:105:1: error: expected ‘;’ before ‘}’ token
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:285:53: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < frame.getKeypoints3D().size();i++)
                                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:291:50: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i< frame.getKeypoints().size();i++)
                                                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:299:38: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if ((slam.getBadFrameCounter() == badFrameCnt)&&(slam.getNoTrafoFoundCounter() == noTrafoCnt))
                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:299:86: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if ((slam.getBadFrameCounter() == badFrameCnt)&&(slam.getNoTrafoFoundCounter() == noTrafoCnt))
                                                                                      ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
